Refactor go layout. Added initial profile and admin areas.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,6 +9,15 @@
 @import "~motion-ui/motion-ui";
 @import "icons";
 
+
+.admin_header_h1 {
+    background-image: url('/dist/assets/contours_12_1.png');
+    color: white;
+    font-weight: 700;
+    text-align: right;
+    padding: 0.1em 0.5em 0.1em 0.1em;
+}
+
 .gradient_bg {
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffb76b+0,ffa73d+27,ff7c00+62,ff7f04+100 */
     background: #ffb76b; /* Old browsers */
