--- a/templates/admin_missions.gohtml
+++ b/templates/admin_missions.gohtml
@@ -1,7 +1,6 @@
 {{define "content"}}
-    {{with .header }}
-        {{template "page_header" . }}
-    {{end}}
+
+    {{template "alert" .alerts}}
 
     <div class="grid-container">
         <div class="grid-x grid-padding-x">
