--- a/templates/firetracker.gohtml
+++ b/templates/firetracker.gohtml
@@ -1,6 +1,7 @@
 {{define "content"}}
 
     {{template "page_header" .header }}
+    {{template "alert" .alerts}}
 
     <div class="grid-container bottom_spacer">
         <div class="grid-x grid-padding-x">
