--- a/templates/missions.gohtml
+++ b/templates/missions.gohtml
@@ -1,10 +1,13 @@
 {{define "content"}}
-    {{with .header }}
-        {{template "page_header" . }}
-    {{end}}
+
+    {{template "alert" .alerts}}
 
     <div class="grid-container">
         <div class="grid-x grid-padding-x">
+            {{template "admin_header" "Missions Overview"}}
+            <div class="cell">
+                <a class="button medium success" href="/missions/create">New Mission</a>
+            </div>
             <div class="cell">
                 <table>
                     <thead>
