Basic file upload/download functional

--- a/templates/layouts/layout.gohtml
+++ b/templates/layouts/layout.gohtml
@@ -123,6 +123,8 @@
                                         ({{.person.Agency.AgencyName}})</a>
                                     <ul class="menu vertical vertical_shadow">
                                         <li><a class="link" href="/missions">Missions</a></li>
+                                        <li><a class="link" href="/downloads">Downloads</a></li>
+                                        <li><a class="link" href="/uploads">Uploads</a></li>
                                         {{if eq .person.Agency.AgencyID 1}}
                                             <li><a class="link" href="/admin/missions">Missions Admin</a></li>
                                             <li><a class="link" href="/admin/agencies">Agencies Admin</a></li>
