--- a/templates/admin_agencies.gohtml
+++ b/templates/admin_agencies.gohtml
@@ -1,10 +1,11 @@
 {{define "content"}}
 
+    {{template "admin_header" "Agencies Admin" }}
     {{template "alert" .alerts}}
 
-    <div class="grid-container">
+    <div class="top-grid-container">
         <div class="grid-x grid-padding-x">
-            {{template "admin_header" "Agencies Admin" }}
+
             <div class="cell">
                 <table>
                     <thead>
