--- a/templates/admin_missions.gohtml
+++ b/templates/admin_missions.gohtml
@@ -1,11 +1,11 @@
 {{define "content"}}
-
+    {{template "admin_header" "Missions Admin" }}
     {{template "alert" .alerts}}
 
-    <div class="grid-container">
+    <div class="top-grid-container">
         <div class="grid-x grid-padding-x">
             <div class="cell medium-6">
-                <h1>Agencies Admin</h1>
+                <h1>Missions Admin</h1>
             </div>
             <div class="cell">
                 <table>
