--- a/templates/missions.gohtml
+++ b/templates/missions.gohtml
@@ -1,10 +1,10 @@
 {{define "content"}}
-
+    {{template "admin_header" "Missions Overview"}}
     {{template "alert" .alerts}}
 
-    <div class="grid-container">
+    <div class="top-grid-container">
         <div class="grid-x grid-padding-x">
-            {{template "admin_header" "Missions Overview"}}
+
             <div class="cell">
                 <a class="button large success" href="/missions/create">New Mission</a>
             </div>
