--- a/templates/upload.gohtml
+++ b/templates/upload.gohtml
@@ -1,10 +1,9 @@
 {{define "content"}}
-
+    {{template "admin_header" "Upload Files" }}
     {{template "alert" .alerts}}
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <div class="grid-container">
+        <div class="top-grid-container">
             <div class="grid-x grid-padding-x">
-                {{template "admin_header" "Upload File"}}
                 <div class="cell medium-6">
                     <div class="grid-x grid-padding-x">
                         <div class="cell">
